<resources>
    <string name="app_name">Kappa</string>
    <string name="action_settings">Settings</string>

    <string name="video">비디오</string>
    <string name="powered_by">Anonymous</string>
    <string name="version">V0.0.1</string>
    <string name="name">Anonymous</string>

    <!--interaction tabs-->
    <string name="resolution_smaller">640x480</string>
    <string name="resolution_bigger">1280x720</string>
    <string name="render_landmark">show</string>
    <string name="render_view">view</string>
    <string name="render_info">info</string>
    <string name="frame_radio">frame radio</string>
    <string name="cpu_radio">CPU radio</string>

    <string name="title_activity_cpu_filter">CpuFilterActivity</string>
</resources>
